2005-07-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (operandsEqu): fixed bug 1246687

2005-07-23 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/include/mcs51/at89c51ed2.h: added.

2005-07-23 Raphael Neider <rneider AT web.de>

	* src/pic/gen.h: added emitpcode macro for debugging
	* src/pic/gen.c (emitpcode): renamed to emitpcode_real
	  and replace by macro adding debug information on demand
	* (genNot): fixed to C semantics (!0 = 1; !x = 0 iff x != 0)
	* (gencjne): tried to fix; replaced with correct (slower) code
	* (gen{Unp,P}ackBits): fixed single bit access
	* src/pic/pcode.c (AnalyzepCode): fixed DFPRINTF argument
	* src/pic/pcodepeep.c (pCodeSearchCondition): fixed finding
	  previous instruction
	* src/pic/pcoderegs.c (regIsSpecial): NEW, check whether a
	  register has to be handled with care (forbidding movement
	  of assignments/uses, removing assignments completely, ...)
	* (pCodeOptime2pCodes): make use of regIsSpecial
	* added lots of debugging output (commented out)
	* src/pic/rallloc.c (deassignLRs): prevent operand registers
	  from being reused as result UNLESS it is known to work

2005-07-23 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/Util/dbuf.h: include <stddef.h> for size_t
	* .version: changed to version 2.5.2

2005-07-23 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCloop.c (loopInvariants): fixed bug #1234048

2005-07-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (genMinus): fixed bug #1241835,
	  (genModOneByte): removed needless psha/pula

2005-07-22 Raphael Neider <rneider AT web.de>

	* src/SDCCmain.c (linkEdit): initialized linkerScriptFileName,
	  have PIC14 handled like PIC16, fixes broken pic14 linker calls
	* src/pic/gen.c (resolveIfx): do not "invent" labels
	* (genSkipc): changed to positive logic
	* (genSkipCond): removed as no longer needed
	* (pic14_mov2w_regOrLit,genCmp): NEW, replacement for buggy version,
	  backport from PIC16