@@ -1,3 +1,7 @@
+2005-07-29 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* device/include/mcs51/msm8xc154s.h: added, thanks to Matthias Arndt
+
 2005-07-28 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/mcs51/gen.c (operandsEqu): fixed bug 1246687
